--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* General Styles */
 body {
   font-family: Arial, sans-serif;
   background: url("./background.jpg") no-repeat center center/cover;
@@ -60,7 +59,14 @@ h1 {
   justify-content: center;
 }
 .search-bar {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  outline: none;
 }
+
 /* Filters----------------------------------------------------------------- */
 .filters {
   display: flex;
@@ -68,8 +74,7 @@ h1 {
   margin-bottom: 20px;
 }
 
-.filter,
-.delete-all {
+.filter {
   background-color: #007bff;
   color: white;
   border: none;
@@ -77,12 +82,27 @@ h1 {
   border-radius: 4px;
   cursor: pointer;
 }
-
-.filter:hover,
-.delete-all:hover {
-  background-color: #0056b3;
+.delete-all{
+  background-color: red;
+  color: white;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
+.filter:hover {
+  background-color: #0056b3;
+}
+.filter.active {
+  background-color: #00b368;
+  font-weight: bold;
+}
+.delete-all:hover{
+  background-color: rgb(192, 70, 70);
+}
+
+/*----------------------------------------------------------------------------------------------------------------------*/
 /* Todos Section */
 .todos {
   list-style: none;
@@ -143,7 +163,7 @@ h1 {
   border-radius: 3px;
 }
 
-/* Responsive Design */
+/* Responsive Design ------------------------------------------------------------------------------------------------------*/
 @media (max-width: 600px) {
   .container {
     width: 90%;
